--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
         border-left: 3px solid #003b6f;
         color: #003b6f
       }
+      .slab {
+        font-family: 'Roboto Slab', serif;
+      }
 
     </style>
 
@@ -54,14 +57,16 @@
 
   <body class="grey lighten-3">
 
-      <nav id="navbar" class="grey darken-4">
+      <nav id="navbar" class="grey darken-4 slab">
         <div class="nav-wrapper">
           <a href="#!" class="brand-logo hide-on-med-and-up" style="">Yu's Lab</a>
           <a href="#!" class="brand-logo hide-on-small-only" style="margin-left:25px">Yu's Lab</a>
 
           <ul class="right hide-on-med-and-down">
-            <li><a href="sass.html">Sass</a></li>
-            <li><a href="badges.html">Components</a></li>
+            <li><a href="#research_interests">researches</a></li>
+            <li><a href="#members">members</a></li>
+            <li><a href="#news">news</a></li>
+            <li><a href="#publications">publications</a></li>
           </ul>
         </div>
       </nav>
